# Blogosphere

./: README.md  dumpdata.json  pyproject.toml
comments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: settings.py  urls.py
data/: comments.json  posts.json  users.json
posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_author_alter_post_comment.py  0003_alter_post_comment.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_birth_date.py  0004_alter_user_phone_number.py
